<resources>
    <string name="app_name">Wireless Energy Monitor V 0.1</string>
    <string name="loading_data">Loading data...</string>
    <string name="RealPower">Real Time Power Usage:</string>
    <string name="powerDisplayed">0.00W</string>
    <string name="totalPower">Total Power Consumed Today:</string>
    <string name="totalPowerDisplayed">0.000Wh</string>
    <string name="graphs">Graphs</string>
    <string name="about">About Us</string>
    <string name="real_time">Real Time</string>
    <string name="power_graph">Power Graph</string>
    <string name="about_us_text">UoA ELECTENG 209 Design Project \n \n James Ashworth, Adil Bhayani, Savi Mohan, Mark Yep</string>
    <string name="_0v">0.00V</string>
    <string name="_0a">0.00A</string>

    <string-array name="graphsArray" id="graphArray">
        <item>Real Time Power (W)</item>
        <item>Real Time Current (A)</item>
        <item>Real Time Voltage (V)</item>
    </string-array>
</resources>
