<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="electeng209.energymonitor.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loading_data"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RealPower"
        android:layout_marginTop="100dp"
        android:text="@string/RealPower"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerDisplayed"
        android:id="@+id/powerDisplayed"
        android:layout_marginTop="52dp"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_below="@+id/RealPower"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPower"
        android:id="@+id/totalPower"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_marginTop="92dp"
        android:layout_below="@+id/powerDisplayed"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPowerDisplayed"
        android:id="@+id/totalPowerDisplayed"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/totalPower"
        android:layout_alignRight="@+id/powerDisplayed"
        android:layout_alignEnd="@+id/powerDisplayed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graphs"
        android:id="@+id/graphButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_time"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/graphButton"
        android:layout_toStartOf="@+id/graphButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settingsButton"
        android:layout_alignTop="@+id/graphButton"
        android:layout_toRightOf="@+id/graphButton"
        android:layout_toEndOf="@+id/graphButton" />

</RelativeLayout>
