<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    android:layout_gravity="center"
    tools:context="electeng209.energymonitor.Graphs">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/real_time"
            android:id="@+id/realTimeButton" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/graphs"
            android:id="@+id/graphButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about"
            android:textColor="#0066ff"
            android:id="@+id/settingsButton" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="151dp"
            android:text="@string/about_us_text"
            android:id="@+id/settingsText"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:src="@mipmap/about_pic"
            android:background="#00ffffff" />

    </LinearLayout>

</RelativeLayout>
